--- a/portfolio-app/src/components/HeroImg2Styles.css
+++ b/portfolio-app/src/components/HeroImg2Styles.css
@@ -4,6 +4,8 @@
     background: rgba(0,0,0,0.5);
     height: 60vh;
     position: relative;
+    display: flex;
+    justify-content: center;
 }
 
 .hero-img::before {
@@ -20,12 +22,12 @@
 }
 
 .heading {
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 48%;
+    height: 100%;
 }
 
 .hero-img h1 {
