--- a/portfolio-app/src/components/HeroImg2Styles.css
+++ b/portfolio-app/src/components/HeroImg2Styles.css
@@ -6,19 +6,19 @@
     position: relative;
     display: flex;
     justify-content: center;
+    background-size: cover;
+    background-position: center;
 }
 
 .hero-img::before {
     content: "";
-    background: url("https://images.unsplash.com/photo-1522252234503-e356532cafd5?q=80&w=1325&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
-    background-size: cover;
-    background-position: center top;
-    height: 100%;
-    width: 100%;
     position: absolute;
     top: 0;
     left: 0;
-    z-index: -1;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.84); /* Adjust opacity here (0.5 = 50% dark) */
+    z-index: 1;
 }
 
 .heading {
@@ -28,6 +28,8 @@
     align-items: center;
     width: 48%;
     height: 100%;
+    z-index: 1;
+    position: relative;
 }
 
 .hero-img h1 {
