updated Navbar, added images

--- a/portfolio-app/src/components/NavbarStyles.css
+++ b/portfolio-app/src/components/NavbarStyles.css
@@ -16,6 +16,17 @@ h1, h4, p, a {
     text-decoration: none;
 }
 
+.logo-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.logo-container .logo {
+    max-width: 40px;
+    max-height: 44px;
+    margin-right: 1.04rem;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -43,6 +54,14 @@ h1, h4, p, a {
 .nav-menu li a {
     font-size: 1.2rem;
     font-weight: 500;
+}
+
+.nav-menu li a:hover {
+    background: linear-gradient(45deg, #f5f193, #90ee90);  
+    -webkit-background-clip: text; /*clips the background to text*/
+    -webkit-text-fill-color: transparent;
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 .hamburger {
@@ -86,11 +105,12 @@ ul {
     padding: 12px 32px;
     font-size: 1rem;
     text-transform: uppercase;
-    background: rgb(15, 248, 23);
+    background: linear-gradient(45deg, #f5f193, #90ee90);
     color: #222;
     border: 1px solid #fff;
     font-weight: 600;
     cursor: pointer;
+    border-radius: 8px;
 }
 
 /*Home page white button*/
@@ -101,6 +121,10 @@ ul {
     background: transparent;
     color: #fff;
     border: 2px solid white;
+}
+
+.btn-light:hover {
+    background: rgba(0,0,0,0.9);
 }
 
 .btn:hover {
