--- a/portfolio-app/src/components/InfoStyles.css
+++ b/portfolio-app/src/components/InfoStyles.css
@@ -19,7 +19,8 @@
 
 .info-container img {
     max-width: 80%;
-    height: 60%;
+    height: auto;        /*Ensures */
+    object-fit: contain; /*Keeps image within container without distortion*/
     display: block;
     margin: 20px auto;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
