added CBS news logo

--- a/portfolio-app/src/components/NewsStyles.css
+++ b/portfolio-app/src/components/NewsStyles.css
@@ -6,8 +6,8 @@
 }
 
 .news-container-array {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
     justify-content: center;
     align-items: center;
 }
